--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u36<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     
     <div style="margin: 50px; align-items: center;  border: 2px solid blue; padding: 20px; background-color: rgb(213, 220, 220);">
 
-    <h1>MENU</h1>
+    <h1>vResturant MENU</h1>
 
 
 
